# gatesight

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy-worker.yml  deploy.yml  pr.yml  rollback.yml
apps/web/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
apps/web/public/: _headers
apps/web/scripts/: generate-headers.mjs
apps/web/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
apps/web/src/api/: client.test.ts  client.ts  generated.ts  openapi.generated.ts  poll.test.ts  poll.ts
apps/web/src/auth/: AuthProvider.tsx
apps/web/src/camera/: capture.test.ts  capture.ts  motion.test.ts  motion.ts  plateGate.test.ts  plateGate.ts  region.test.ts  region.ts  types.ts  upload.ts
apps/web/src/components/: AppShell.tsx  StatusChip.tsx
docs/: ARCHITECTURE.md  COST.md  DATA_MODEL.md  EVENT_CATALOG.md  FAILURE_MODES.md  MODEL_CARD.md  PHYSICAL_CAMERA_TEST_CHECKLIST.md  PRIVACY.md  README.md  RUNBOOK.md  SECURITY.md  TESTING.md
docs/adr/: ADR-001-browser-only-capture.md  ADR-002-capture-first-asynchronous-recognition.md  ADR-003-direct-presigned-s3-uploads.md  ADR-004-sqs-recognition-work-queue.md  ADR-005-eventbridge-after-recognition.md  ADR-006-lambda-instead-of-ecs.md  ADR-007-fastalpr-fastplateocr.md  ADR-008-dynamodb-access-pattern-design.md  ADR-009-multi-frame-consensus.md  ADR-010-no-local-media-persistence.md  ADR-011-transactional-outbox.md  ADR-012-standard-queue-idempotency.md  ADR-013-no-alert-from-uncertainty.md  README.md
ml/: download_models.py  model-manifest.json
ml/evaluation/: README.md  challenger_paddle.py  dataset.schema.json  evaluate.py  example.dataset.json
ml/fixtures/: README.md
scripts/: canary.py  export_openapi.py  invite_reviewer.sh  package_lambdas.py  seed_portfolio_locations.py  smoke.sh
services/control_api/gatesight_control_api/: __init__.py  api_models.py  auth.py  main.py  settings.py  store.py
services/heartbeat_monitor/gatesight_heartbeat_monitor/: __init__.py  handler.py
services/outbox_publisher/gatesight_outbox_publisher/: __init__.py  handler.py
services/recognition_worker/: Dockerfile
services/recognition_worker/gatesight_recognition_worker/: __init__.py  engine.py  handler.py  quality.py  repository.py
services/security_evaluator/gatesight_security_evaluator/: __init__.py  handler.py
services/visit_projector/gatesight_visit_projector/: __init__.py  handler.py
tests/e2e/: README.md
tests/integration/: test_real_aws_environment.py
tests/unit/: test_auth.py  test_canary.py  test_consensus.py  test_consumer_configuration.py  test_heartbeat_monitor.py  test_model_release_scope.py  test_models.py  test_normalization.py  test_outbox_publisher.py  test_quality.py  test_recognition_engine.py  test_security.py  test_store_cursor.py  test_store_s3.py  test_system_health_store.py  test_visits.py  test_worker_configuration.py  test_worker_idempotency.py  test_worker_repository.py
(+26 files in other folders)
